--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 3.10)
 # set the project name
 project(algorithms)
 
-add_subdirectory(binary_search)
+add_subdirectory(Matrix)
